# transcribe

./: .gitignore  84_xx10xxxx_15A_transcription.txt  85_xx00xxxx_11A_transcription.txt  85_xx00xxxx_11B_transcription.txt  86_xx10xxxx_12A_transcription.txt  86_xx10xxxx_12B_transcription.txt  87_xx10xxxx_13A_transcription.txt  87_xx10xxxx_13B_transcription.txt  89_xx00xxxx_15A_transcription.txt  89_xx00xxxx_15B_transcription.txt  90_xx00xxxx_11A_transcription.txt  90_xx00xxxx_11B_transcription.txt  91_xx00xxxx_12A_transcription.txt  91_xx00xxxx_12B_transcription.txt  README.md  check_matching.py  check_transcription_files.py  detailed_check.py  example.py  main.py  output_transcription.txt  prep_kaldi.py  pyproject.toml  transcribe.py  verify_order.py
segments_folder/: 84A_segments  84B_segments  85A_segments  85B_segments  86A_segments  86B_segments  87A_segments  87B_segments  89A_segments  89B_segments  90A_segments  90B_segments  91A_segments  91B_segments  92_xx00xxxx_13A_segments  92_xx00xxxx_13B_segments  94_xx00xxxx_15A_segments  94_xx00xxxx_15B_segments  95_xx00xxxx_11A_segments  95_xx00xxxx_11B_segments
transcriptions_folder/: 84A_text  84B_text  85A_text  85B_text  86A_text  86B_text  87A_text  87B_text  89A_text  89B_text  90A_text  90B_text  91A_text  91B_text  92_xx00xxxx_13A_text  92_xx00xxxx_13B_text  94_xx00xxxx_15A_text  94_xx00xxxx_15B_text  95_xx00xxxx_11A_text  95_xx00xxxx_11B_text
