[project]
name = "transcribe"
version = "0.1.0"
description = "Audio transcription with CTC forced alignment using Hugging Face models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0"
]
